tests/lean/lua3.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'int'
  Assumed: x
hello
Error (line: 4, pos: 0) executing external script (script.lua:4), attempt to call global 'prn' (a nil value)
