tests/lean/lua3.lean
Import int.
Variable x : Int

(**
dofile("script.lua")
**)